Fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,7 @@ $button-height: 48px;
     top: 32px;
     transform: translateX(-50%);
     left: 50%;
+    z-index: 10;
 
     button {
       background: #eee;
@@ -83,6 +84,8 @@ $button-height: 48px;
   }
 
   svg {
+    position: absolute;
+
     circle {
       fill: red;
     }
